--- a/authserver/.gitignore
+++ b/authserver/.gitignore
@@ -127,4 +127,8 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
+HELP.md
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+
 # End of https://www.gitignore.io/api/java,gradle,intellij
